disable horizontal scroll + add margin to inputlabel +fix arrows in nav drawer

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -6,6 +6,7 @@ body,
   padding: 0;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 .MuiButton-containedPrimary:hover {
   opacity: 0.9 !important;
